fix preload and untabify